objects/Test_Case__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Actual_Results__c</fullName>
        <label>Actual Results</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Customer_Journey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Journey</label>
        <referenceTo>Customer_Journey__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Results__c</fullName>
        <label>Expected Results</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Customer_Journey__r.Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;New&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Reopen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Coverage__c</fullName>
        <label>Test Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <label>Test Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regression Test</fullName>
                </value>
                <value>
                    <fullName>Unit Test</fullName>
                </value>
                <value>
                    <fullName>Smoke Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Defects__c</fullName>
        <label>Total Defects</label>
        <summaryForeignKey>Defect__c.Test_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Open_Defects__c</fullName>
        <label>Total Open Defects</label>
        <summaryFilterItems>
            <field>Defect__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Fixed, Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>Defect__c.Test_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Test Cases</relationshipLabel>
        <relationshipName>Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Case</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Test Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Cases</pluralLabel>
    <recordTypes>
        <fullName>Development_Test</fullName>
        <active>true</active>
        <label>Development Test</label>
    </recordTypes>
    <recordTypes>
        <fullName>User_Acceptance_Test_UAT</fullName>
        <active>true</active>
        <label>User Acceptance Test (UAT)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PreventStatusPassed_If_Defects_Open</fullName>
        <active>true</active>
        <errorConditionFormula>Total_Open_Defects__c &lt;&gt; 0 &amp;&amp; ISCHANGED(Status__c) &amp;&amp; ISPICKVAL(Status__c, &quot;Passed&quot;)</errorConditionFormula>
        <errorMessage>Please fix all Defects before changing Test Case status to &quot;Passed&quot;</errorMessage>
    </validationRules>
</CustomObject>